<resources>
    <string name="app_name" translatable="false">Platzigram</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="create_here">, crea una aqui</string>
    <string name="email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password_confirm">Confirmar contraseña</string>
    <string name="join">ÚNETE</string>
    <string name="toolbar_title_create_account">Crear Cuenta</string>
    <string name="author">Bryam Soto</string>
    <string name="ago">Hace</string>
    <string name="time">4 días</string>
    <string name="like">6 Me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_image">"Catedral de Huamanga"</string>
    <string name="lorem">Gracias por la respuesta, tengo Android Studio 2.2.3 y uno de los íconos sería el del engranaje de color celeste que aparece al final de los íconos (no el de barra del título), y también hay otros que ha utilizado y ahora no recuerdo, pero que aparecen en el video, pero no vienen en la configuración por defecto de Android Studio.</string>
    <string name="img_transition">transition</string>
</resources>
