<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_picture"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height"
    android:layout_marginBottom="@dimen/like_margin_top"
    cardview:cardCornerRadius="@dimen/cardview_radius">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_cardview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            android:transitionName="@string/img_transition"
            android:scaleType="centerCrop"
            android:src="@drawable/catedral" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/shading_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/fab_margin"
            android:paddingLeft="@dimen/fab_margin">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size_cardview" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_ago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ago"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_cardview" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_cardview"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_cardview" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/like_margin_top"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbx_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector" />

                <TextView
                    android:id="@+id/tv_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_cardview"
                    android:text="@string/like"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_cardview" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>